chore: patch instead of minor

--- a/.changeset/pr-38.md
+++ b/.changeset/pr-38.md
@@ -1,28 +1,32 @@
 ---
-'@terminallyonline/cord': minor
+"@terminallyonline/cord": patch
 ---
 
 ## 🔄 PR Details
+
 feat: hook cleanup
 
 > No description provided.
 
 ## 📝 Changes
-- chore: update pnpm lock ([2dde3f2](https://github.com/Terminally-Online/cord/commit/2dde3f23f4b3ea2aed3a278b831bce22e325cd1d))
-- Merge branch 'fix-react-export' of https://github.com/Terminally-Online/cord into fix-react-export ([b7864db](https://github.com/Terminally-Online/cord/commit/b7864dbeaa6279387d7358a018dd505ca70ec0ae))
-- fix: remove all react references ([a3aef5a](https://github.com/Terminally-Online/cord/commit/a3aef5ab162c90296299e64c6d7c7702cc6db1b1))
-- chore: update changeset for PR #38 ([77111bb](https://github.com/Terminally-Online/cord/commit/77111bbc8e75c4c7ed9ef0fd25fb44ab63dba80a))
-- chore: proper changeset move ([23f8058](https://github.com/Terminally-Online/cord/commit/23f8058af83490398b0352395ca7dff60db233f9))
-- chore: update changeset for PR #38 ([8dbbf66](https://github.com/Terminally-Online/cord/commit/8dbbf6696e0c9397d23c9f382e69c367cb72a8fd))
-- feat: hook cleanup ([84fd743](https://github.com/Terminally-Online/cord/commit/84fd743a79fab7fcb2e42fa4cdaa97eca8662b08))
+
+-   chore: update pnpm lock ([2dde3f2](https://github.com/Terminally-Online/cord/commit/2dde3f23f4b3ea2aed3a278b831bce22e325cd1d))
+-   Merge branch 'fix-react-export' of https://github.com/Terminally-Online/cord into fix-react-export ([b7864db](https://github.com/Terminally-Online/cord/commit/b7864dbeaa6279387d7358a018dd505ca70ec0ae))
+-   fix: remove all react references ([a3aef5a](https://github.com/Terminally-Online/cord/commit/a3aef5ab162c90296299e64c6d7c7702cc6db1b1))
+-   chore: update changeset for PR #38 ([77111bb](https://github.com/Terminally-Online/cord/commit/77111bbc8e75c4c7ed9ef0fd25fb44ab63dba80a))
+-   chore: proper changeset move ([23f8058](https://github.com/Terminally-Online/cord/commit/23f8058af83490398b0352395ca7dff60db233f9))
+-   chore: update changeset for PR #38 ([8dbbf66](https://github.com/Terminally-Online/cord/commit/8dbbf6696e0c9397d23c9f382e69c367cb72a8fd))
+-   feat: hook cleanup ([84fd743](https://github.com/Terminally-Online/cord/commit/84fd743a79fab7fcb2e42fa4cdaa97eca8662b08))
 
 ## 🔍 Additional Context
-- PR: [#38](https://github.com/Terminally-Online/cord/pull/38)
-- Branch: `fix-react-export`
-- Author: @nftchance
-- Files Changed: 20
+
+-   PR: [#38](https://github.com/Terminally-Online/cord/pull/38)
+-   Branch: `fix-react-export`
+-   Author: @nftchance
+-   Files Changed: 20
 
 ## 📊 Stats
+
 ```diff
  20 files changed, 1101 insertions(+), 2469 deletions(-)
 ```
